# opengl-lab

./: .gitignore  CMakeLists.txt  README.md
assets/: README.md
cmake/: AddLabExecutable.cmake
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
homeworks/01/: 01-cylinder-cone.cpp  02-hsv-cylinder-cone.cpp  CMakeLists.txt
lectures/01/: 01-hello-triangle.cpp  02-glm-vectors.cpp  03-drawing-triangles.cpp  04-transforms.cpp  05-3d-shapes.cpp  06-homework.cpp  CMakeLists.txt
lectures/02/: 01-draw-modes.cpp  02-primitive-shapes.cpp  03-3d-shapes.cpp  04-faces-culling.cpp  05-transformations.cpp  CMakeLists.txt
lectures/03/: 01-transforms.cpp  CMakeLists.txt
lectures/06/: 01-hello-texture.cpp  02-quad-texture.cpp  03-circle-texture.cpp  CMakeLists.txt
lectures/07/: 01-blending.cpp  02-lighting.cpp  03-models.cpp  CMakeLists.txt
lib/lab-utils/: CMakeLists.txt
lib/lab-utils/include/lab-utils/: alpha-shape.hpp  application.hpp  basic-shader.hpp  basic-shape.hpp  colors.hpp  life-cycle.hpp  orbit-application.hpp  shaded-shape.hpp  shader-utils.hpp  shaders-utils.hpp  textured-shape.hpp
lib/lab-utils/src/: alpha-shape.cpp  application.cpp  basic-shape.cpp  orbit-application.cpp  shaded-shape.cpp  shader-utils.cpp  shaders-utils.cpp  textured-shape.cpp
lib/learnopengl/: CMakeLists.txt
lib/learnopengl/include/learnopengl/: mesh.h  model.h  model_loading.h  shader.h
